fix-bug gap ovelay but changing the units form vw,vh => %

--- a/Component/OverlayComponent/OverlayComponent.module.css
+++ b/Component/OverlayComponent/OverlayComponent.module.css
@@ -1,38 +1,41 @@
 /** @format */
 
 .container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   z-index: 24;
 }
 
 .overlay {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  overflow: auto;
   background-color: #666666;
   opacity: 0.4;
-  z-index: 6;
+  z-index: 26;
 }
 
 .overlay_content_box {
   width: 35rem;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   padding-left: 1rem;
-  z-index: 7;
+  z-index: 28;
   overflow: auto;
   background-color: #ffffff;
 }
 
 .pos_right {
-  right: -0.5rem;
+  right: -1rem;
   -webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
@@ -133,11 +136,7 @@
 /* Large Mobile Screen */
 @media (max-width: 27em) {
   .overlay_content_box {
-    width: 100vw;
-    height: 100vh;
-  }
-  .overlay_cnt {
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 }
